cmake_minimum_required(VERSION 3.25)
project(cpp-pro-homework)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(utils)
add_subdirectory(04_23Daschenko01010542)
add_subdirectory(04_23Daschenko01010101)
add_subdirectory(04_23Daschenko01011206)
add_subdirectory(04_23Daschenko01030807)
add_subdirectory(04_23Daschenko1770)